# This 'pyproject.toml' file is used in PyPI package building to configure setuptools
# It only specifies the package version requirements for building package, other package metadata are included in 'setup.py'
[build-system]
requires = ["setuptools>=67.0", "wheel>=0.38", "twine>=4.0"]
build-backend = "setuptools.build_meta"